--- a/style.css
+++ b/style.css
@@ -57,9 +57,9 @@ form label {
 		}
 		
 	#sidebar{
-		float: right;
+		float: left;
 		width: 250px;
-		background: #dceef6;
+		background: #000000;
 		text-align: left;
 		padding-left: 10px
 		margin-right: 20px;
@@ -99,7 +99,7 @@ form label {
 	
 	
 	textarea {
-		background-color: #dceef6;
+		background-color: #7FFF00;
 	}
 	
 		#contents2	
@@ -166,7 +166,7 @@ form label {
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 0.8em;
 	}
-	
+
 	 #plain2
 	{
 		color: #039;
