--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ form label {
 	#sidebar{
 		float: left;
 		width: 250px;
-		background: #191970;
+		background: #000000;
 		text-align: left;
 		padding-left: 10px
 		margin-right: 20px;
@@ -143,7 +143,7 @@ form label {
 	
 	p	
 	{
-		color: #000000;
+		color: #ffffff;
 		background-color: transparent;
 		font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 		font-size: 0.8em;
@@ -162,8 +162,8 @@ form label {
 	
 	input
 	{
-		color: #039;
-		background-color: transparent;
+		color: #000000;
+		background-color: #CCCC99;
 		font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 		font-size: 0.8em;
 	}
