changed format of add band and venue pages

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 		margin-top: 10px;
 		padding: 5px;
 		background: #cc9;
-		background-image: url('border5.gif');
+		background-image: url('images/border.gif');
 		background-repeat: no-repeat;
 		background-position: top center;
 		text-align: center;
