--- a/style.css
+++ b/style.css
@@ -14,16 +14,20 @@
 	}
 	
 	#wrap{
-		width: 1350px;
+		width: 800px;
 		margin: 0 auto;
 		background: #000000;
 	}
 	
 	#header{
+		margin-left:auto;
+		margin-right:auto;
 		margin-top: 10px;
-		padding: 5px;
+		width:800px;
+		
+		/*padding: 5px;*/
 		background: #cc9;
-		background-image: url('images/border.gif');
+		/*background-image: url('images/logo2.png');*/
 		background-repeat: no-repeat;
 		background-position: top center;
 		text-align: center;
@@ -35,7 +39,7 @@
 	}
 	
 	#toolbar{
-		width: 1350px;
+		width: 800px;
 		margin-top: 10px;
 		margin-right: auto;
 		margin-left: auto;
@@ -44,10 +48,12 @@
 	}
 	
 	#features{
-		float: left;
-		padding: 10px;
+		float:center;
 		background: #000000;
+		margin-left:auto;
+		margin-right:auto;
 		margin-bottom: 20px;
+		width:800px;
 	}
 	
 	#sidebar{
@@ -61,9 +67,8 @@
 	
 	#main{
 		float: left;
-		width: 490px;
+		width: 800px;
 		text-align: left;
-		padding-left: 10px;
 		background-color: #000000;
 		color: #ffffff;	
 	}
@@ -71,7 +76,7 @@
     #footer{
      	clear: both;
      	background: #8b4513;
-		width: 1350px;
+		width: 800px;
 		margin-bottom: 10px;
 		text-align: center;
     }
