--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@
 		
 	}
 	
+	#videoBar-bar{
+	padding:10px;
+	margin-right:400px;
+	float:left;
+	}
+	#videoPlayer{
+	margin-right:400px;
+	float:left;
+	}
 	#wrap{
 		width: 800px;
 		margin: 0 auto;
